--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -1,3 +1,3 @@
 theme: jekyll-theme-cayman
-title: Inpainting in the Frequency - Universal Speech Super-Resolution with Diffusion Models
-description: Chin-Yun Yu, Sung-Lin Yeh
+title: Conditioning and Sampling in Variational Diffusion Models for Speech Super-Resolution
+description: Chin-Yun Yu, Sung-Lin Yeh, George Fazekas, Hao Tang
